📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -6518,5 +6518,189 @@
         "published": "Mon, 08 Dec 2025 22:37:28 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46198606\">Comments</a>"
+    },
+    {
+        "id": "https://www.theverge.com/gadgets/799419/best-gifts-for-travelers-2025",
+        "title": "The 27 best gifts for travelers who are always on the move",
+        "link": "https://www.theverge.com/gadgets/799419/best-gifts-for-travelers-2025",
+        "published": "2025-12-10T12:22:06-05:00",
+        "source": "The Verge",
+        "summary": "I'm convinced that whoever said it's about the journey, not the destination, has never traveled. Try sitting on a plane for 16 hours - plus delays, airport security, and a snoring seat neighbor - and then get back to me. While getting from point A to point B can feel like a test of endurance, [&#8230;]"
+    },
+    {
+        "id": "https://arstechnica.com/cars/2025/12/ugly-infotainment-mars-the-2025-subaru-forester-hybrid-experience/",
+        "title": "Ugly infotainment mars the 2025 Subaru Forester Hybrid experience",
+        "link": "https://arstechnica.com/cars/2025/12/ugly-infotainment-mars-the-2025-subaru-forester-hybrid-experience/",
+        "published": "Wed, 10 Dec 2025 18:00:19 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "It drives fine, but the first hybrid Forester is not without its flaws."
+    },
+    {
+        "id": "https://arstechnica.com/science/2025/12/this-is-the-oldest-evidence-of-people-starting-fires/",
+        "title": "This is the oldest evidence of people starting fires",
+        "link": "https://arstechnica.com/science/2025/12/this-is-the-oldest-evidence-of-people-starting-fires/",
+        "published": "Wed, 10 Dec 2025 17:14:08 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "We didn't start the fire. (Neanderthals did, at least 400,000 years ago.)"
+    },
+    {
+        "id": "https://arstechnica.com/health/2025/12/sperm-donor-with-rare-cancer-mutation-fathered-nearly-200-children-in-europe/",
+        "title": "Sperm donor with rare cancer mutation fathered nearly 200 children in Europe",
+        "link": "https://arstechnica.com/health/2025/12/sperm-donor-with-rare-cancer-mutation-fathered-nearly-200-children-in-europe/",
+        "published": "Wed, 10 Dec 2025 16:59:15 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "Children with the mutation have up to a 90% chance of developing cancer by age 60."
+    },
+    {
+        "id": "https://www.engadget.com/big-tech/amazon-brings-same-day-deliveries-of-perishable-food-items-to-1300-new-areas-175746531.html?src=rss",
+        "title": "Amazon brings same-day deliveries of perishable food items to 1,300 new areas",
+        "link": "https://www.engadget.com/big-tech/amazon-brings-same-day-deliveries-of-perishable-food-items-to-1300-new-areas-175746531.html?src=rss",
+        "published": "Wed, 10 Dec 2025 17:57:46 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Amazon is <a href=\"https://www.aboutamazon.com/news/retail/amazon-same-day-fresh-grocery-delivery-united-states\"><ins>introducing same-day delivery</ins></a> of perishable food items to 1,300 new cities and towns throughout the country, upping the total service area to more than 2,300 locations. This expansion covers cities like Boise, Salt Lake City, Fort Collins, Omaha, Des Moines and many more.</p>\n<p>Check the link to see <a class=\"rapid-with-clickid\" href=\"https://shopping.yahoo.com/rdlw"
+    },
+    {
+        "id": "https://www.engadget.com/gaming/the-uk-government-will-look-into-rockstars-firing-of-union-organizing-workers-174216696.html?src=rss",
+        "title": "The UK government will 'look into' Rockstar's firing of union-organizing workers",
+        "link": "https://www.engadget.com/gaming/the-uk-government-will-look-into-rockstars-firing-of-union-organizing-workers-174216696.html?src=rss",
+        "published": "Wed, 10 Dec 2025 17:42:16 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Rockstar Games may have to answer for what appears to be union-busting behavior. UK Prime Minister Keir Starmer, under pressure from parliament, <a class=\"link\" href=\"https://www.edinburghnews.scotsman.com/news/ministers-investigate-rockstar-north-union-busting-5437546\" target=\"_blank\">said</a> the government will &quot;look into&quot; <a class=\"link\" href=\"https://www.engadget.com/gaming/rockstar-games-accused-of-union-busting-in-the-uk-221004334.html\" target=\"_blank\">the firing of 31 employ"
+    },
+    {
+        "id": "https://www.engadget.com/deals/the-best-vpn-deals-up-to-88-percent-off-protonvpn-surfshark-expressvpn-nordvpn-and-more-120056445.html?src=rss",
+        "title": "The best VPN deals: Up to 88 percent off ProtonVPN, Surfshark, ExpressVPN, NordVPN and more",
+        "link": "https://www.engadget.com/deals/the-best-vpn-deals-up-to-88-percent-off-protonvpn-surfshark-expressvpn-nordvpn-and-more-120056445.html?src=rss",
+        "published": "Wed, 10 Dec 2025 17:29:06 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>With a good <a href=\"https://www.engadget.com/cybersecurity/vpn/best-vpn-130004396.html\">virtual private network (VPN)</a>, you can stream TV shows and events from all over the world, protect your information from hackers and thwart those online trackers that watch you sleep and show you weird personalized ads. Although we strongly recommend <a href=\"https://www.engadget.com/cybersecurity/vpn/what-is-a-vpn-and-what-can-you-do-with-one-161549146.html\">using a VPN</a>, you shouldn't jump on jus"
+    },
+    {
+        "id": "https://www.engadget.com/gaming/nintendo/the-next-switch-online-additions-are-n64-games-rayman-2-the-great-escape-and-tonic-trouble-171500122.html?src=rss",
+        "title": "The next Nintendo Switch Online additions are N64 games Rayman 2: The Great Escape and Tonic Trouble",
+        "link": "https://www.engadget.com/gaming/nintendo/the-next-switch-online-additions-are-n64-games-rayman-2-the-great-escape-and-tonic-trouble-171500122.html?src=rss",
+        "published": "Wed, 10 Dec 2025 17:15:00 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Nintendo has announced its Nintendo Switch Online additions for December, which are for all the N64-era 3D platformer fans out there. On December 17, <em>Rayman 2: The Great Escape </em>and <em>Tonic Trouble</em> are joining the Switch\u2019s Nintendo Classics library. As a reminder, N64 games are exclusive to Switch Online + Expansion Pack subscribers, along with the emulators for the Game Boy Advance, Sega Genesis and GameCube.</p>\n<p>For retro gaming completionsists, <em>Tonic Trouble </em>migh"
+    },
+    {
+        "id": "https://gizmodo.com/sci-fi-horror-fantasy-authors-best-books-of-2025-2000694713",
+        "title": "20 Sci-Fi, Fantasy, and Horror Authors Pick Their Favorite Sci-Fi, Fantasy, and Horror Books of 2025",
+        "link": "https://gizmodo.com/sci-fi-horror-fantasy-authors-best-books-of-2025-2000694713",
+        "published": "Wed, 10 Dec 2025 18:00:32 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Shroud 2\" class=\"attachment-full size-full wp-post-image\" height=\"1280\" src=\"https://gizmodo.com/app/uploads/2025/12/shroud-2.jpg\" width=\"1920\" /><br /><br />io9 reached out to genre writers and asked them to share the titles they couldn't put down this year."
+    },
+    {
+        "id": "https://gizmodo.com/amd-redstone-fsr-4-upscaling-update-gaming-2000697829",
+        "title": "AMD\u2019s New Gaming Upscaler Is Here to Knock Nvidia Off Its Throne",
+        "link": "https://gizmodo.com/amd-redstone-fsr-4-upscaling-update-gaming-2000697829",
+        "published": "Wed, 10 Dec 2025 17:50:53 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Aliwnare Qd Oled Monitor Spiderman Radeon Rx\" class=\"attachment-full size-full wp-post-image\" height=\"1280\" src=\"https://gizmodo.com/app/uploads/2025/12/Aliwnare-QD-OLED-Monitor-Spiderman-Radeon-RX.jpg\" width=\"1920\" /><br /><br />The new 'Redstone\" AI upscaler makes PC games look better, but it would be truly spectacular on consoles or handhelds."
+    },
+    {
+        "id": "https://gizmodo.com/spacex-hypes-2026-ipo-with-predictable-ingredient-ai-in-orbit-2000697922",
+        "title": "SpaceX Hypes 2026 IPO With Predictable Ingredient: AI in Orbit",
+        "link": "https://gizmodo.com/spacex-hypes-2026-ipo-with-predictable-ingredient-ai-in-orbit-2000697922",
+        "published": "Wed, 10 Dec 2025 17:45:12 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"A Falcon 9 rocket launching\" class=\"attachment-full size-full wp-post-image\" height=\"1280\" src=\"https://gizmodo.com/app/uploads/2025/12/starlink-launch.jpg\" width=\"1920\" /><br /><br />Elon Musk is building Skynet, from the movie Don't Build Skynet."
+    },
+    {
+        "id": "https://gizmodo.com/antarcticas-only-bug-is-eating-something-it-really-shouldnt-2000697908",
+        "title": "Antarctica\u2019s Only Bug Is Eating Something It Really Shouldn\u2019t",
+        "link": "https://gizmodo.com/antarcticas-only-bug-is-eating-something-it-really-shouldnt-2000697908",
+        "published": "Wed, 10 Dec 2025 17:15:13 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Midges Antarctica\" class=\"attachment-full size-full wp-post-image\" height=\"1280\" src=\"https://gizmodo.com/app/uploads/2025/12/midges-antarctica-e1765383848463.jpeg\" width=\"1920\" /><br /><br />The findings hint at the creeping presence of microplastics near the South Pole, researchers suggest."
+    },
+    {
+        "id": "https://mashable.com/article/instagram-is-generating-seo-friendly-headlines-for-user-posts",
+        "title": "Instagram is auto-generating SEO-friendly headlines when users posts appear in Google search results",
+        "link": "https://mashable.com/article/instagram-is-generating-seo-friendly-headlines-for-user-posts",
+        "published": "Wed, 10 Dec 2025 17:50:56 +0000",
+        "source": "Mashable",
+        "summary": "Instagram is generating SEO-friendly headlines for user posts."
+    },
+    {
+        "id": "https://mashable.com/article/dec-10-magic-the-gathering-edge-of-eternities-commander-deck-bundle-deal",
+        "title": "The Magic: The Gathering Edge of Eternities Commander Deck Bundle has hit its best-ever price \u2014 save over $40 at Amazon",
+        "link": "https://mashable.com/article/dec-10-magic-the-gathering-edge-of-eternities-commander-deck-bundle-deal",
+        "published": "Wed, 10 Dec 2025 17:23:16 +0000",
+        "source": "Mashable",
+        "summary": "The Magic: The Gathering deal: Edge of Eternities Commander Deck Bundle is on sale for $132.24 on Amazon. That's the lowest-ever price for this set."
+    },
+    {
+        "id": "https://mashable.com/article/dec-10-dji-neo-3-battery-combo-deal",
+        "title": "Snag the DJI Neo drone for its lowest-ever price at Amazon \u2014 save over $50 right now",
+        "link": "https://mashable.com/article/dec-10-dji-neo-3-battery-combo-deal",
+        "published": "Wed, 10 Dec 2025 17:07:28 +0000",
+        "source": "Mashable",
+        "summary": "Get the best DJI drone deal at Amazon. As of Dec. 10, get the DJI Neo three-battery combo for its lowest price yet at Amazon."
+    },
+    {
+        "id": "https://mashable.com/article/dec-10-amazon-gift-card-deal",
+        "title": "Need a last-minute gift? Amazon has gift cards on sale for up to 20% off.",
+        "link": "https://mashable.com/article/dec-10-amazon-gift-card-deal",
+        "published": "Wed, 10 Dec 2025 16:54:10 +0000",
+        "source": "Mashable",
+        "summary": "Amazon has gift cards from California Pizza Kitchen, Eddie Bauer, Aero, and more at up to 20% off"
+    },
+    {
+        "id": "https://mashable.com/article/vpn-watch-porn",
+        "title": "Is watching porn with a VPN safer?",
+        "link": "https://mashable.com/article/vpn-watch-porn",
+        "published": "Wed, 10 Dec 2025 16:53:02 +0000",
+        "source": "Mashable",
+        "summary": "A VPN shields your IP address, but does it make porn viewing safer? We asked tech experts about whether to use a VPN when watching porn."
+    },
+    {
+        "id": "https://readwrite.com/denmark-large-decrease-total-gambling-spend/",
+        "title": "Denmark reports large decrease in total gambling spend \u2013 but led by one market only",
+        "link": "https://readwrite.com/denmark-large-decrease-total-gambling-spend/",
+        "published": "Wed, 10 Dec 2025 18:05:38 +0000",
+        "source": "ReadWrite",
+        "summary": "<div><img alt=\"Copenhagen, Denmark. Denmark reports large decrease in total gambling spend \u2013 but led by one market only\" class=\"attachment-medium size-medium wp-post-image\" height=\"200\" src=\"https://readwrite.com/wp-content/uploads/2025/12/Copenhagen-Denmark-300x200.jpg\" style=\"width: 100%; height: 66.67%; margin-bottom: 15px;\" width=\"300\" /></div>\n<p>The Gambling Authority in Denmark has found a large decrease in the total gambling spend compared to the same period&#8230; <a class=\"more-link\" h"
+    },
+    {
+        "id": "https://readwrite.com/derek-sein-lwin-wins-2025-wsop-main-event-final-cherokee/",
+        "title": "Derek Sein-Lwin wins 2025 WSOP main event final at Cherokee",
+        "link": "https://readwrite.com/derek-sein-lwin-wins-2025-wsop-main-event-final-cherokee/",
+        "published": "Wed, 10 Dec 2025 18:01:12 +0000",
+        "source": "ReadWrite",
+        "summary": "<div><img alt=\"Derek Sein-Lwin wins 2025 WSOP main event final at Cherokee. Derek Sein-Lwin at WSOP\" class=\"attachment-medium size-medium wp-post-image\" height=\"200\" src=\"https://readwrite.com/wp-content/uploads/2025/12/Derek-Sein-Lwin-wins-2025-WSOP-main-event-final-at-Cherokee-300x200.png\" style=\"width: 100%; height: 66.67%; margin-bottom: 15px;\" width=\"300\" /></div>\n<p>Derek Sein-Lwin takes home the grand prize at the Cherokee WSOP Circuit Main Event, winning a massive\u00a0 $281,514 at his&#8230;"
+    },
+    {
+        "id": "https://www.zdnet.com/article/google-mixboard-ai-create-presentations-free-nano-banana-pro/",
+        "title": "Hate creating presentations? I tried Google's new Nano Banana Pro-powered tool, and the results blew me away",
+        "link": "https://www.zdnet.com/article/google-mixboard-ai-create-presentations-free-nano-banana-pro/",
+        "published": "Wed, 10 Dec 2025 18:07:00 GMT",
+        "source": "Latest news",
+        "summary": "Google's Mixboard now includes Nano Banana Pro\u200b to create presentations from your photos and documents - and it's free. Try it and see what you think."
+    },
+    {
+        "id": "https://www.zdnet.com/article/amazon-ring-familiar-faces-feature-privacy-concerns/",
+        "title": "Why Amazon's new facial-recognition AI for Ring doorbells has privacy experts worried",
+        "link": "https://www.zdnet.com/article/amazon-ring-familiar-faces-feature-privacy-concerns/",
+        "published": "Wed, 10 Dec 2025 18:06:50 GMT",
+        "source": "Latest news",
+        "summary": "Ring users in most of the US can now save up to fifty faces in the app, allowing for more personalized notifications. But the convenience probably isn't worth the sacrifice in privacy."
+    },
+    {
+        "id": "https://www.reuters.com/legal/litigation/australia-social-media-ban-takes-effect-world-first-2025-12-09/",
+        "title": "Australia begins enforcing world-first teen social media ban",
+        "link": "https://www.reuters.com/legal/litigation/australia-social-media-ban-takes-effect-world-first-2025-12-09/",
+        "published": "Tue, 09 Dec 2025 18:12:29 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46208348\">Comments</a>"
+    },
+    {
+        "id": "https://www.oaktreecapital.com/insights/memo/is-it-a-bubble",
+        "title": "Is it a bubble?",
+        "link": "https://www.oaktreecapital.com/insights/memo/is-it-a-bubble",
+        "published": "Wed, 10 Dec 2025 17:30:43 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46220640\">Comments</a>"
     }
 ]
