📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -6702,5 +6702,149 @@
         "published": "Wed, 10 Dec 2025 17:30:43 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46220640\">Comments</a>"
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/10/osha-investigating-new-crane-accident-at-spacexs-starbase-facility/",
+        "title": "OSHA investigating new crane accident at SpaceX\u2019s Starbase facility",
+        "link": "https://techcrunch.com/2025/12/10/osha-investigating-new-crane-accident-at-spacexs-starbase-facility/",
+        "published": "Wed, 10 Dec 2025 19:06:50 +0000",
+        "source": "TechCrunch",
+        "summary": "A subcontractor says he was crushed by a metal support, breaking his hip, knee, and tibia. He's suing SpaceX and the construction company who employed him."
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/10/marco-rubio-bans-calibri-font-at-state-department-for-being-too-dei/",
+        "title": "Marco Rubio bans Calibri font at State Department for being too DEI",
+        "link": "https://techcrunch.com/2025/12/10/marco-rubio-bans-calibri-font-at-state-department-for-being-too-dei/",
+        "published": "Wed, 10 Dec 2025 19:05:02 +0000",
+        "source": "TechCrunch",
+        "summary": "Calibri, which could make documents easier to read for the vision impaired, was apparently installed in 2023 by the department\u2019s then-DEI office."
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/10/youtube-tv-to-launch-genre-based-subscription-plans-in-2026/",
+        "title": "YouTube TV to launch genre-based subscription plans in 2026",
+        "link": "https://techcrunch.com/2025/12/10/youtube-tv-to-launch-genre-based-subscription-plans-in-2026/",
+        "published": "Wed, 10 Dec 2025 18:56:19 +0000",
+        "source": "TechCrunch",
+        "summary": "The new packages will give consumers more flexibility over the content that they want to pay for."
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/10/reddit-is-testing-verification-badges/",
+        "title": "Reddit is testing verification badges",
+        "link": "https://techcrunch.com/2025/12/10/reddit-is-testing-verification-badges/",
+        "published": "Wed, 10 Dec 2025 18:30:41 +0000",
+        "source": "TechCrunch",
+        "summary": "Verified users will actually be notable figures, not just people who paid for the checkmark."
+    },
+    {
+        "id": "https://www.theverge.com/tech/841622/doma-smart-door-august-smart-lock-makers",
+        "title": "August&#8217;s founders are back with a smart front door",
+        "link": "https://www.theverge.com/tech/841622/doma-smart-door-august-smart-lock-makers",
+        "published": "2025-12-10T14:00:00-05:00",
+        "source": "The Verge",
+        "summary": "It looks like someone may have finally done the smart door right. Doma Home, a new company from the creators of the August smart lock, has announced its first product: the Doma Intelligent Door. A motorized smart door that automatically opens as you approach and closes after you enter, the Doma door also features built-in [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/gadgets/841647/apple-studio-display-monitor-deal-sale",
+        "title": "Apple\u2019s 5K Studio Display is down to its lowest price in months",
+        "link": "https://www.theverge.com/gadgets/841647/apple-studio-display-monitor-deal-sale",
+        "published": "2025-12-10T14:00:00-05:00",
+        "source": "The Verge",
+        "summary": "Apple\u2019s Studio Display is an investment even while Amazon has the tilt-adjustable model marked down to $1,368 ($231 off) \u2014&#160;its lowest price in several months. The 27-inch 5K monitor looks incredible, and has a built-in six-speaker audio system that impressed us in our tests. Its three microphone array and Apple\u2019s optional voice isolation mode made [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/news/841809/meta-avocado-ai-model-charge-open-source-mark-zuckerberg",
+        "title": "Meta might charge for a future AI model",
+        "link": "https://www.theverge.com/news/841809/meta-avocado-ai-model-charge-open-source-mark-zuckerberg",
+        "published": "2025-12-10T13:46:12-05:00",
+        "source": "The Verge",
+        "summary": "Meta's next AI model could mark a change in its \"open source\" AI strategy that Mark Zuckerberg had called \"the path forward.\" Currently, the company is working on a new AI model, code-named Avocado, that it might charge for access to, Bloomberg reports. Last year, Meta launched its open source (depending on who you ask, [&#8230;]"
+    },
+    {
+        "id": "https://www.engadget.com/cybersecurity/12-steps-you-can-take-right-now-to-be-safer-online-130008335.html?src=rss",
+        "title": "12 steps you can take right now to be safer online",
+        "link": "https://www.engadget.com/cybersecurity/12-steps-you-can-take-right-now-to-be-safer-online-130008335.html?src=rss",
+        "published": "Wed, 10 Dec 2025 19:08:43 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>There's a fundamental question you can ask of both the internet and real life: &quot;How do I enjoy my time here without taking unnecessary risks?&quot; In grass-touching meatspace, you can cut out processed foods, carry pepper spray and avoid skydiving without a partner.</p>\n<p>But the best methods for staying safe online aren't as intuitive. The internet is a massive town square where people are constantly bellowing deeply personal facts about themselves. It's no surprise that it's become a"
+    },
+    {
+        "id": "https://www.engadget.com/big-tech/state-department-calibri-font-was-a-dei-hire-190454957.html?src=rss",
+        "title": "State Department: Calibri font was a DEI hire",
+        "link": "https://www.engadget.com/big-tech/state-department-calibri-font-was-a-dei-hire-190454957.html?src=rss",
+        "published": "Wed, 10 Dec 2025 19:04:54 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>The US Department of State is unwinding <a class=\"link\" href=\"https://www.washingtonpost.com/world/2023/01/18/state-department-times-new-roman-calibri/\" target=\"_blank\">a 2023 decision</a> to use san-serif Calibri font on all official communications and switching to Times New Roman instead, <a class=\"link rapid-with-clickid\" href=\"https://shopping.yahoo.com/rdlw?merchantId=c813ae39-7d58-41cb-ac66-ad830606ceef&amp;siteId=us-engadget&amp;pageId=1p-autolink&amp;contentUuid=932020b6-d08b-49f5-99c"
+    },
+    {
+        "id": "https://www.engadget.com/cybersecurity/hackers-tricked-chatgpt-grok-and-google-into-helping-them-install-malware-185711492.html?src=rss",
+        "title": "Hackers tricked ChatGPT, Grok and Google into helping them install malware",
+        "link": "https://www.engadget.com/cybersecurity/hackers-tricked-chatgpt-grok-and-google-into-helping-them-install-malware-185711492.html?src=rss",
+        "published": "Wed, 10 Dec 2025 18:57:11 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Ever since reporting earlier this year on how easy it is to <a href=\"https://www.engadget.com/ai/ai-browsers-may-be-the-best-thing-that-ever-happened-to-scammers-220315936.html\">trick an agentic browser</a>, I've been following the intersections between modern AI and old-school scams. Now, there's a new convergence on the horizon: hackers are apparently using AI prompts to seed Google search results with dangerous commands. When executed by unknowing users, these commands prompt computers to "
+    },
+    {
+        "id": "https://www.engadget.com/entertainment/streaming/youtube-tv-plans-will-let-you-choose-genre-specific-content-packages-182909455.html?src=rss",
+        "title": "YouTube TV Plans will let you choose genre-specific content packages",
+        "link": "https://www.engadget.com/entertainment/streaming/youtube-tv-plans-will-let-you-choose-genre-specific-content-packages-182909455.html?src=rss",
+        "published": "Wed, 10 Dec 2025 18:29:09 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>YouTube TV, which launched in 2017 as a $35-per-month all-in-one service, will soon introduce YouTube TV Plans. Although the <a class=\"link\" href=\"https://blog.youtube/news-and-events/introducing-youtube-tv-plans-launching-early-2026/\" target=\"_blank\">announcement</a> is light on details, we know the initiative will let you sign up for genre-specific packages, such as sports and news. In other words, it's the final step in <a class=\"link\" href=\"https://www.engadget.com/entertainment/streaming"
+    },
+    {
+        "id": "https://gizmodo.com/sundance-2026-genre-films-2000697939",
+        "title": "Here Are All the Awesome-Sounding Genre Films Coming to Sundance 2026",
+        "link": "https://gizmodo.com/sundance-2026-genre-films-2000697939",
+        "published": "Wed, 10 Dec 2025 19:05:56 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Buddy Movie\" class=\"attachment-full size-full wp-post-image\" height=\"1280\" src=\"https://gizmodo.com/app/uploads/2025/12/Buddy-movie.jpg\" width=\"1920\" /><br /><br />New films by Kogonada, Cathy Yan, Andrew Stanton, and more will be playing at the legendary festival next month."
+    },
+    {
+        "id": "https://gizmodo.com/a-vital-nasa-mars-orbiter-has-gone-dark-2000697867",
+        "title": "A Vital NASA Mars Orbiter Has Gone Dark",
+        "link": "https://gizmodo.com/a-vital-nasa-mars-orbiter-has-gone-dark-2000697867",
+        "published": "Wed, 10 Dec 2025 18:45:47 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"This artist&#039;s concept depicts NASA&#039;s Mars Atmosphere and Volatile EvolutioN (MAVEN) spacecraft near Mars.\" class=\"attachment-full size-full wp-post-image\" height=\"1280\" src=\"https://gizmodo.com/app/uploads/2025/12/MAVEN.jpg\" width=\"1920\" /><br /><br />MAVEN has circled Mars for more than a decade, exploring the planet and relaying data from robots on the surface."
+    },
+    {
+        "id": "https://gizmodo.com/u-s-measles-outbreak-nears-grim-milestone-as-hundreds-quarantine-in-south-carolina-2000697900",
+        "title": "Measles Outbreak Nears Grim Milestone as Hundreds Quarantine in South Carolina",
+        "link": "https://gizmodo.com/u-s-measles-outbreak-nears-grim-milestone-as-hundreds-quarantine-in-south-carolina-2000697900",
+        "published": "Wed, 10 Dec 2025 18:40:35 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Robert F. Kennedy Jr., US secretary of Health and Human Services (HHS), speaks in the Oval Office of the White House in Washington, DC, US, on Thursday, Nov. 6, 2025.\" class=\"attachment-full size-full wp-post-image\" height=\"1280\" src=\"https://gizmodo.com/app/uploads/2025/12/RFK-Jr.-Nov.-6-2025.jpg\" width=\"1920\" /><br /><br />What happens when your country's public health system is run by anti-vaccine activists?"
+    },
+    {
+        "id": "https://mashable.com/article/youtube-unlists-all-previous-youtube-rewind-videos",
+        "title": "Why did YouTube unlist all of its past YouTube Rewind videos?",
+        "link": "https://mashable.com/article/youtube-unlists-all-previous-youtube-rewind-videos",
+        "published": "Wed, 10 Dec 2025 18:00:03 +0000",
+        "source": "Mashable",
+        "summary": "YouTube just unlisted all of its old YouTube Rewind videos. But, why?"
+    },
+    {
+        "id": "https://www.zdnet.com/article/hp-series-5-pro-portable-monitor-review/",
+        "title": "This HP portable monitor made me reconsider a gadget I've ignored for years",
+        "link": "https://www.zdnet.com/article/hp-series-5-pro-portable-monitor-review/",
+        "published": "Wed, 10 Dec 2025 18:56:00 GMT",
+        "source": "Latest news",
+        "summary": "HP's Series 5 Pro 14-inch WQXGA portable monitor lets you enjoy a dual-monitor setup on the road with some extra usability perks."
+    },
+    {
+        "id": "https://www.zdnet.com/article/transfer-spotify-playlists-to-apple-music-ios-26/",
+        "title": "This iOS 26 feature effectively converted this Spotify user to Apple Music - and she's here to stay",
+        "link": "https://www.zdnet.com/article/transfer-spotify-playlists-to-apple-music-ios-26/",
+        "published": "Wed, 10 Dec 2025 18:47:00 GMT",
+        "source": "Latest news",
+        "summary": "This simple tweak can noticeably boost speed and responsiveness on almost any device - no matter the brand. Here's how."
+    },
+    {
+        "id": "https://karpathy.bearblog.dev/auto-grade-hn/",
+        "title": "Auto-grading decade-old Hacker News discussions with hindsight",
+        "link": "https://karpathy.bearblog.dev/auto-grade-hn/",
+        "published": "Wed, 10 Dec 2025 17:23:53 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46220540\">Comments</a>"
     }
 ]
